--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "contentful": "^8.1.9",
+    "moment": "^2.29.1",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
